app/Databox.module.sass
label.npt
    display: flex
    flex-direction: column-reverse
    cursor: text
    width: 100%
    position: relative
    &.swt
        flex-direction: row-reverse
        justify-content: space-between
        align-items: center
        cursor: pointer
        gap: 20px
    &.checkbox
        flex-direction: row
        gap: 3px
        padding: 3px 0
        align-items: center
        cursor: pointer
    & p
        font-weight: 500
        margin: 0
        color: var(--font-st)
        transition: color .15s linear
        display: flex
        flex-direction: column
        gap: 4px
        font-size: 16px
        & span
            font-size: 14px
            font-weight: 400
    & input, select, textarea
        margin: 5px 0
        background: 0
        border: 0
        outline: 0
        font-size: 16px
        width: 100%
        color: var(--on-background)
        resize: none
        font-size: 16px
        width: 100%
        box-sizing: border-box
        &[type=text],&[type=password],&[type=email],&[type=url]
            padding: 12px
            border-radius: 8px
            border: 1px solid var(--secondary)
        &[type=checkbox]
            appearance: none
            height: 18px
            width: 18px
            min-width: 18px
            min-height: 18px
            outline: none
            display: inline-block
            vertical-align: top
            position: relative
            margin: 0 8px
            transition-duration: .1s
            border: 1px solid var(--primary)
            border-radius: 4px
            position: relative
            &:checked
                background: var(--primary)
                &::before
                    content: '\2713'
                    color: var(--on-primary)
                    top: 50%
                    left: 50%
                    transform: translate(-50%, -50%)
                    position: absolute
        &:focus + p
            color: var(--primary)
    & textarea
        padding: 12px
        border-radius: 8px
        border: 1px solid var(--secondary)

label.switch
    position: relative
    display: inline-block
    min-width: 40px
    min-height: 25px
    width: fit-content
    height: fit-content
    & input
        opacity: 0
        width: 0
        height: 0

span.slider
    position: absolute
    cursor: pointer
    top: 0
    left: 0
    right: 0
    bottom: 0
    border: 1px solid var(--outline)
    transition: .2s
    border-radius: 34px
    &:before
        position: absolute
        content: ""
        height: 15px
        width: 15px
        left: 4px
        bottom: 4px
        background: var(--outline)
        transition: .2s
        border-radius: 50%
        input:checked + &
            transform: translateX(15px)
            background: var(--on-primary)
            display: flex
            align-items: center
            justify-content: center
            font-size: 14px
            content: '\2713'
            color: var(--primary)
    input:checked + &
        background: var(--primary)
        border: 1px solid var(--primary)

div.flex
    display: flex
    align-items: center
    gap: 10px
    width: 100%
    & button.location
        border: 0
        background: var(--primary-container)
        color: var(--on-primary-container)
        border-radius: 50%
        padding: 5px
        min-width: 36px
        min-height: 36px
        display: flex
        align-items: center
        justify-content: center
        cursor: pointer
        transition: background-color .1s linear
        width: 36px
        height: 36px
        &:hover
            background: var(--secondary-container)
            color: var(--on-secondary-container)
        & div
            padding: 0 1px
            & div
                border-color: var(--on-primary-container) transparent transparent transparent !important

